--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chalk": "^2.4.1",
     "commander": "^2.18.0",
     "cz-conventional-changelog": "^2.1.0",
+    "mime-types": "^2.1.20",
     "progress": "^2.0.0",
     "recursive-readdir": "^2.2.2"
   },
